Added new components

--- a/src/Layout.css
+++ b/src/Layout.css
@@ -44,3 +44,12 @@
   .menu_icon ul li{
    text-align: right;
   }
+
+  /* #dropdown_item{
+    position: relative;
+  } */
+
+  #drp_dwn{
+    position: absolute;
+    top: 30px;
+  }
