--- a/src/AddStudent.css
+++ b/src/AddStudent.css
@@ -2,6 +2,12 @@
    display: flex;
     align-items: center;
     justify-content: center;
+    border: 1px solid black;
+    width: 330px;
+    border-radius: 5px;
+    background-color: azure;
+    box-shadow: 3px 3px black;
+    border: none;
 }
 
 #btn_back{
