--- a/src/Layout.css
+++ b/src/Layout.css
@@ -1,3 +1,9 @@
+body{
+ background-image: url("school.jpg");
+background-size: cover;
+background-repeat: no-repeat;
+}
+
 .facebook,.twitter{
     color: blue;
 }
@@ -11,6 +17,7 @@
     display: grid;
     grid-template-columns: 7rem 1fr 2fr 1fr 7rem;
     box-shadow: 5px 10px 8px 10px #888888;
+    background-color: bisque;
   }
 
   .menu_logo{
