--- a/src/Home.css
+++ b/src/Home.css
@@ -1,3 +1,15 @@
-.container{
+.home_container{
     margin-top: 30px;
-}
+   }
+.left_content{
+    display: flex;
+    float: left;
+    width: 10%;
+    background-color: whitesmoke;
+    height: 600px;
+   } 
+.right_content{
+    display: flex;
+    float: right;
+}     
+
